--- a/fiddlejonesjames.ipynb
+++ b/fiddlejonesjames.ipynb
@@ -58,6 +58,60 @@
     "print(\"It's currently 2023, so you can retire in\", retirement_year)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
+      "\u001b[1;31mError code from Jupyter: 1\n",
+      "\u001b[1;31musage: jupyter.py [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+      "\u001b[1;31m                  [--paths] [--json] [--debug]\n",
+      "\u001b[1;31m                  [subcommand]\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter: Interactive Computing\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mpositional arguments:\n",
+      "\u001b[1;31m  subcommand     the subcommand to launch\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31moptional arguments:\n",
+      "\u001b[1;31m  -h, --help     show this help message and exit\n",
+      "\u001b[1;31m  --version      show the versions of core jupyter packages and exit\n",
+      "\u001b[1;31m  --config-dir   show Jupyter config dir\n",
+      "\u001b[1;31m  --data-dir     show Jupyter data dir\n",
+      "\u001b[1;31m  --runtime-dir  show Jupyter runtime dir\n",
+      "\u001b[1;31m  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+      "\u001b[1;31m                 format.\n",
+      "\u001b[1;31m  --json         output paths as machine-readable json\n",
+      "\u001b[1;31m  --debug        output debug information about paths\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mAvailable subcommands:\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter command `jupyter-notebook` not found. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "def add_numbers(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "add_numbers(1, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -76,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9 (default, Jul 19 2021, 09:37:30) \n[Clang 13.0.0 (clang-1300.0.27.3)]"
+   "version": "3.8.9"
   },
   "vscode": {
    "interpreter": {
